--- a/source/Todo.UseCase.Tests/Todo.UseCase.Tests.csproj
+++ b/source/Todo.UseCase.Tests/Todo.UseCase.Tests.csproj
@@ -4,14 +4,13 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{EB06CFA0-421D-4B39-8FB5-546472040859}</ProjectGuid>
+    <ProjectGuid>{E5658D62-572B-4808-BA47-C5854193D1E7}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>HeavyMetal.BakeSale.Domain.UseCase</RootNamespace>
-    <AssemblyName>HeavyMetal.BakeSale.Domain.UseCase</AssemblyName>
-    <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
+    <RootNamespace>Todo.UseCase.Tests</RootNamespace>
+    <AssemblyName>Todo.UseCase.Tests</AssemblyName>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -39,20 +38,9 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <Reference Include="TddBuddy.CleanArchitecture.Domain">
-      <HintPath>..\packages\TddBuddy.CleanArchitecture.Domain.DotNet.1.0.5\lib\net461\TddBuddy.CleanArchitecture.Domain.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CalculateChangeUseCase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TotalPurchaseUseCase.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\HeavyMetal.BakeSale.Domain\HeavyMetal.BakeSale.Domain.csproj">
-      <Project>{f202524d-9289-40ec-b380-cbafdbb5e95e}</Project>
-      <Name>HeavyMetal.BakeSale.Domain</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
