--- a/source/Todo.Api/packages.config
+++ b/source/Todo.Api/packages.config
@@ -9,4 +9,6 @@
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net452" />
   <package id="SimpleInjector" version="4.0.8" targetFramework="net452" />
   <package id="SimpleInjector.Integration.WebApi" version="4.0.8" targetFramework="net452" />
+  <package id="TddBuddy.CleanArchitecture.Domain.DotNet" version="2.0.0" targetFramework="net461" />
+  <package id="TddBuddy.CleanArchitecture.DotNet" version="2.0.0" targetFramework="net461" />
 </packages>
