--- a/source/Todo.Api.Tests/packages.config
+++ b/source/Todo.Api.Tests/packages.config
@@ -1,4 +1,26 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.OwinSelfHost" version="5.2.3" targetFramework="net461" />
+  <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net461" />
+  <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net461" />
+  <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net461" />
+  <package id="Microsoft.Owin" version="3.1.0" targetFramework="net461" />
+  <package id="Microsoft.Owin.Host.HttpListener" version="3.1.0" targetFramework="net461" />
+  <package id="Microsoft.Owin.Hosting" version="3.1.0" targetFramework="net461" />
+  <package id="Microsoft.Owin.Testing" version="3.1.0" targetFramework="net461" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
+  <package id="NSubstitute" version="2.0.3" targetFramework="net461" />
+  <package id="NSubstituteAutoMocker" version="1.1.0.0" targetFramework="net461" />
   <package id="NUnit" version="3.7.1" targetFramework="net452" />
+  <package id="NUnit3TestAdapter" version="3.8.0" targetFramework="net461" />
+  <package id="Owin" version="1.0" targetFramework="net461" />
+  <package id="SimpleInjector" version="4.0.8" targetFramework="net461" />
+  <package id="SimpleInjector.Extensions.ExecutionContextScoping" version="4.0.0" targetFramework="net461" />
+  <package id="SimpleInjector.Integration.WebApi" version="4.0.8" targetFramework="net461" />
+  <package id="TddBuddy.CleanArchitecture.Domain.DotNet" version="2.0.0" targetFramework="net461" />
+  <package id="TddBuddy.CleanArchitecture.TestUtils.DotNet" version="1.0.3" targetFramework="net461" />
 </packages>
