--- a/source/Todo.Data.Tests/packages.config
+++ b/source/Todo.Data.Tests/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="NUnit" version="3.7.1" targetFramework="net452" />
+  <package id="NUnit3TestAdapter" version="3.8.0" targetFramework="net461" />
   <package id="TddBuddy.SpeedySqlLocalDb" version="1.1.3" targetFramework="net452" />
 </packages>
