--- a/source/Todo.Domain.Tests/Todo.Domain.Tests.csproj
+++ b/source/Todo.Domain.Tests/Todo.Domain.Tests.csproj
@@ -48,7 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TodoItemTests.cs" />
+    <Compile Include="Model\TodoItemTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
