--- a/source/Todo.Domain.Tests/Todo.Domain.Tests.csproj
+++ b/source/Todo.Domain.Tests/Todo.Domain.Tests.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Model\TodoItemTests.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
