--- a/source/Todo.Domain/packages.config
+++ b/source/Todo.Domain/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net461" />
   <package id="TddBuddy.CleanArchitecture.Domain.DotNet" version="2.0.0" targetFramework="net461" />
+  <package id="TddBuddy.CleanArchitecture.DotNet" version="2.0.0" targetFramework="net461" />
 </packages>
