--- a/source/Todo.TestUtils/packages.config
+++ b/source/Todo.TestUtils/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="NSubstitute" version="2.0.3" targetFramework="net461" />
   <package id="NSubstituteAutoMocker" version="1.1.0.0" targetFramework="net461" />
+  <package id="NUnit" version="3.7.1" targetFramework="net461" />
 </packages>
