--- a/source/Todo.Api/Web.config
+++ b/source/Todo.Api/Web.config
@@ -5,10 +5,10 @@
   -->
 <configuration>
   <appSettings />
-  <configSections>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+  <!--<configSections>
+    --><!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --><!--
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  </configSections>
+  </configSections>-->
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.5.2" />
@@ -52,6 +52,6 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="LeaseAuditContext" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDB)\MSSQLLocalDb;AttachDbFilename=C:\Users\Public\Todo.mdf;Integrated Security=True" />
+    <add name="TodoContext" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDB)\MSSQLLocalDb;AttachDbFilename=C:\Users\Public\Todo.mdf;Integrated Security=True" />
   </connectionStrings>
 </configuration>
