--- a/source/Todo.Api/Todo.Api.csproj
+++ b/source/Todo.Api/Todo.Api.csproj
@@ -96,6 +96,7 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="App_Start\IocConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\CreateTodoItemController.cs" />
     <Compile Include="Controllers\FetchTodoItemController.cs" />
@@ -117,6 +118,10 @@
     <Folder Include="App_Data\" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Todo.Data\Todo.Data.csproj">
+      <Project>{7f09479a-6286-494f-bbc7-207459cec17f}</Project>
+      <Name>Todo.Data</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Todo.Domain\Todo.Domain.csproj">
       <Project>{8dc53cc0-4587-4676-a53d-dbf14ca7884f}</Project>
       <Name>Todo.Domain</Name>
