Added delete controller

--- a/source/Todo.Api/Todo.Api.csproj
+++ b/source/Todo.Api/Todo.Api.csproj
@@ -100,6 +100,7 @@
     <Compile Include="App_Start\IocConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\CreateTodoItemController.cs" />
+    <Compile Include="Controllers\DeleteTodoItemController.cs" />
     <Compile Include="Controllers\FetchTodoItemController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
