--- a/source/Todo.Domain/Todo.Domain.csproj
+++ b/source/Todo.Domain/Todo.Domain.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\ITodoRepository.cs" />
     <Compile Include="UseCase\ICreateTodoItemUseCase.cs" />
+    <Compile Include="UseCase\IDeleteTodoItemUseCase.cs" />
     <Compile Include="UseCase\IFetchTodoCollectionUseCase.cs" />
   </ItemGroup>
   <ItemGroup />
