--- a/source/Todo.Api.Tests/Todo.Api.Tests.csproj
+++ b/source/Todo.Api.Tests/Todo.Api.Tests.csproj
@@ -106,6 +106,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\UpdateTodoItemControllerTests.cs" />
     <Compile Include="Controllers\DeleteTodoItemControllerTest.cs" />
     <Compile Include="Controllers\FetchTodoCollectionControllerTests.cs" />
     <Compile Include="Controllers\CreateTodoItemControllerTests.cs" />
