Updated DeleteTodoItemUseCase to remove guid and string and use messages instead

--- a/source/Todo.Domain/Todo.Domain.csproj
+++ b/source/Todo.Domain/Todo.Domain.csproj
@@ -58,6 +58,8 @@
   <ItemGroup>
     <Compile Include="Messages\CreateTodoItemInputMessage.cs" />
     <Compile Include="Messages\CreateTodoItemOuputMessage.cs" />
+    <Compile Include="Messages\DeleteTodoItemInputMessage.cs" />
+    <Compile Include="Messages\DeleteTodoItemOutputMessage.cs" />
     <Compile Include="Model\TodoItemModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\ITodoRepository.cs" />
