--- a/source/Todo.TestUtils/packages.config
+++ b/source/Todo.TestUtils/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AutoMapper" version="6.1.1" targetFramework="net461" />
   <package id="NSubstitute" version="2.0.3" targetFramework="net461" />
   <package id="NUnit" version="2.6.4" targetFramework="net45" />
 </packages>
