--- a/source/Todo.AutoMapper/Todo.AutoMapper.csproj
+++ b/source/Todo.AutoMapper/Todo.AutoMapper.csproj
@@ -4,14 +4,13 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{FA0E355E-5EBF-43ED-8B29-2125D8C42687}</ProjectGuid>
+    <ProjectGuid>{1A9891DB-682A-4A49-B51D-ED7818480D81}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Todo.UseCase</RootNamespace>
-    <AssemblyName>Todo.UseCase</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <RootNamespace>Todo.AutoMapper</RootNamespace>
+    <AssemblyName>Todo.AutoMapper</AssemblyName>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -34,9 +33,6 @@
     <Reference Include="AutoMapper, Version=6.1.1.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
       <HintPath>..\packages\AutoMapper.6.1.1\lib\net45\AutoMapper.dll</HintPath>
     </Reference>
-    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.10.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -45,37 +41,12 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <Reference Include="TddBuddy.CleanArchitecture.Domain, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\TddBuddy.CleanArchitecture.Domain.DotNet.2.0.0\lib\net461\TddBuddy.CleanArchitecture.Domain.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CreateTodoItemUseCase.cs" />
-    <Compile Include="DeleteTodoItemUseCase.cs" />
-    <Compile Include="FetchTodoCollectionUseCase.cs" />
+    <Compile Include="AutoMapperBuilder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UpdateTodoItemUseCase.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Todo.AutoMapper\Todo.AutoMapper.csproj">
-      <Project>{1a9891db-682a-4a49-b51d-ed7818480d81}</Project>
-      <Name>Todo.AutoMapper</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Todo.Data\Todo.Data.csproj">
-      <Project>{7F09479A-6286-494F-BBC7-207459CEC17F}</Project>
-      <Name>Todo.Data</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Todo.Domain\Todo.Domain.csproj">
-      <Project>{8dc53cc0-4587-4676-a53d-dbf14ca7884f}</Project>
-      <Name>Todo.Domain</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Todo.Entities\Todo.Entities.csproj">
-      <Project>{2dc93311-fa9d-4636-9bc4-a892211e3713}</Project>
-      <Name>Todo.Entities</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
