Removed last instance of TodoItem and replaced with FetchTodoItemOutput instead

--- a/source/Todo.Domain/Todo.Domain.csproj
+++ b/source/Todo.Domain/Todo.Domain.csproj
@@ -64,6 +64,7 @@
     <Compile Include="UseCaseMessages\CreateTodoItemOuput.cs" />
     <Compile Include="UseCaseMessages\DeleteTodoItemInput.cs" />
     <Compile Include="UseCaseMessages\DeleteTodoItemOutput.cs" />
+    <Compile Include="UseCaseMessages\FetchTodoItemOutput.cs" />
     <Compile Include="UseCaseMessages\UpdateTodoItemInput.cs" />
     <Compile Include="UseCaseMessages\UpdateTodoItemOutput.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
