--- a/source/Todo.Data.Tests/Todo.Data.Tests.csproj
+++ b/source/Todo.Data.Tests/Todo.Data.Tests.csproj
@@ -62,7 +62,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Entities\TodoItemTests.cs" />
+    <Compile Include="Entities\TodoItemEfModelTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\TodoItemRepositoryTests.cs" />
   </ItemGroup>
