--- a/source/Todo.Domain.Tests/Todo.Entities.Tests.csproj
+++ b/source/Todo.Domain.Tests/Todo.Entities.Tests.csproj
@@ -51,6 +51,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="TodoCommentTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TodoItemTests.cs" />
   </ItemGroup>
