--- a/source/Todo.Domain/Todo.Domain.csproj
+++ b/source/Todo.Domain/Todo.Domain.csproj
@@ -60,6 +60,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="UseCaseMessages\CreateCommentInput.cs" />
+    <Compile Include="UseCaseMessages\CreateCommentOuput.cs" />
     <Compile Include="UseCaseMessages\CreateTodoItemInput.cs" />
     <Compile Include="UseCaseMessages\CreateTodoItemOuput.cs" />
     <Compile Include="UseCaseMessages\DeleteTodoItemInput.cs" />
@@ -69,6 +71,7 @@
     <Compile Include="UseCaseMessages\UpdateTodoItemOutput.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\ITodoRepository.cs" />
+    <Compile Include="UseCase\ICreateCommentUseCase.cs" />
     <Compile Include="UseCase\ICreateTodoItemUseCase.cs" />
     <Compile Include="UseCase\IDeleteTodoItemUseCase.cs" />
     <Compile Include="UseCase\IFetchTodoCollectionUseCase.cs" />
