--- a/source/Todo.UseCase.Tests/Todo.UseCase.Tests.csproj
+++ b/source/Todo.UseCase.Tests/Todo.UseCase.Tests.csproj
@@ -64,6 +64,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CreateCommentUseCaseTests.cs" />
     <Compile Include="DeleteTodoITemUseCaseTests.cs" />
     <Compile Include="UpdateTodoItemUseCaseTests.cs" />
     <Compile Include="CreateTodoItemUseCaseTests.cs" />
